--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\PC Files\Icon ICO\Skillrack ICO.ico,0
+IconResource=.\Skillrack ICO.ico,0
 [ViewState]
 Mode=
 Vid=
